# flake8-docstrings

./: .gitignore  .gitlab-ci.yml  .hgignore  .pre-commit-config.yaml  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  flake8_docstrings.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
flake8_docstrings/: __init__.py  _pep257.py
