[metadata]
name = flake8_docstrings
version = attr: flake8_docstrings.__version__
description = Extension for flake8 which uses pydocstyle to check docstrings
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pycqa/flake8-docstrings
author = Simon ANDRÉ
author_email = sandre@anybox.fr
maintainer = Ian Cordasco
maintainer_email = graffatcolmingov@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
keywords = PEP 257, pydocstyle, pep257, docstrings, flake8
provides = flake8_docstrings

[options]
py_modules = flake8_docstrings
install_requires =
    flake8>=3
    pydocstyle>=2.1
python_requires = >=3.7

[options.entry_points]
flake8.extension =
    D = flake8_docstrings:pep257Checker

[wheel]
universal = 1
